--- a/SpikaEnterprise/res/layout/activity_chat.xml
+++ b/SpikaEnterprise/res/layout/activity_chat.xml
@@ -104,7 +104,7 @@
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/footerMore"
-            android:background="@layout/chat_mask"
+            android:background="@drawable/chat_mask"
             android:imeOptions="actionDone"
             android:inputType="text"
             android:padding="5dp"
@@ -151,7 +151,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@layout/tab_mask"
+                android:background="@drawable/tab_mask"
                 android:gravity="center"
                 android:paddingBottom="10dp"
                 android:paddingLeft="20dp"
@@ -166,7 +166,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@layout/tab_mask"
+                android:background="@drawable/tab_mask"
                 android:gravity="center"
                 android:paddingBottom="10dp"
                 android:paddingLeft="20dp"
