--- a/SpikaEnterprise/res/layout/dialog_wall_settings.xml
+++ b/SpikaEnterprise/res/layout/dialog_wall_settings.xml
@@ -25,7 +25,7 @@
             android:layout_alignRight="@+id/kickMembers"
             android:layout_below="@+id/topIconSettings"
             android:layout_marginTop="20dp"
-            android:background="@layout/tab_mask"
+            android:background="@drawable/tab_mask"
             android:gravity="center"
             android:paddingBottom="10dp"
             android:paddingLeft="20dp"
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/addMembers"
             android:layout_marginTop="20dp"
-            android:background="@layout/tab_mask"
+            android:background="@drawable/tab_mask"
             android:gravity="center"
             android:paddingBottom="10dp"
             android:paddingLeft="20dp"
@@ -59,7 +59,7 @@
             android:layout_alignRight="@+id/kickMembers"
             android:layout_below="@+id/kickMembers"
             android:layout_marginTop="20dp"
-            android:background="@layout/tab_mask"
+            android:background="@drawable/tab_mask"
             android:gravity="center"
             android:paddingBottom="10dp"
             android:paddingLeft="20dp"
@@ -111,7 +111,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
-            android:background="@layout/tab_mask"
+            android:background="@drawable/tab_mask"
             android:gravity="center"
             android:paddingBottom="10dp"
             android:paddingLeft="20dp"
