--- a/SpikaEnterprise/res/layout/item_chat_default_you.xml
+++ b/SpikaEnterprise/res/layout/item_chat_default_you.xml
@@ -6,7 +6,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/arrowYou"
-        android:background="@layout/message_layout"
+        android:background="@drawable/message_layout"
         android:padding="5dp" >
 
         <TextView
