--- a/SpikaEnterprise/res/layout/item_chat_image_me.xml
+++ b/SpikaEnterprise/res/layout/item_chat_image_me.xml
@@ -6,26 +6,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="15dp"
-        android:layout_toRightOf="@+id/contentLayoutImageYou"
+        android:layout_marginRight="15dp"
+        android:layout_toLeftOf="@+id/contentLayoutImageMe"
         android:contentDescription="@null"
         android:src="@drawable/gb_chat_picture" />
 
     <LinearLayout
-        android:id="@+id/contentLayoutImageYou"
+        android:id="@+id/contentLayoutImageMe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:layout_toRightOf="@+id/arrowYou"
-        android:background="@layout/message_layout"
+        android:layout_gravity="right"
+        android:layout_toLeftOf="@+id/arrowMe"
+        android:background="@drawable/message_layout_blue"
         android:orientation="vertical"
         android:padding="5dp" >
 
         <TextView
-            android:id="@+id/youPersonNameImage"
+            android:id="@+id/mePersonNameImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
+            android:layout_gravity="right"
             android:text="Person 1"
             android:textColor="@color/person_blue"
             android:textStyle="bold" />
@@ -39,13 +39,13 @@
             android:layout_marginTop="10dp" >
 
             <RelativeLayout
-                android:id="@+id/imagePreviewYouLayout"
+                android:id="@+id/imagePreviewMeLayout"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_centerHorizontal="true" >
 
                 <ImageView
-                    android:id="@+id/imagePreviewYou"
+                    android:id="@+id/imagePreviewMe"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:contentDescription="@null"
@@ -53,24 +53,24 @@
             </RelativeLayout>
 
             <TextView
-                android:id="@+id/imgDescriptionYou"
+                android:id="@+id/imgDescriptionMe"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/imagePreviewYouLayout"
+                android:layout_below="@+id/imagePreviewMeLayout"
                 android:layout_centerHorizontal="true"
                 android:text="Hey man, check this out!"
-                android:textColor="@color/text_gray"
+                android:textColor="@color/white"
                 android:textSize="12sp" />
         </RelativeLayout>
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/arrowYou"
+        android:id="@+id/arrowMe"
         android:layout_width="10dp"
         android:layout_height="10dp"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:contentDescription="@null"
-        android:src="@drawable/gb_bubble_arrow_left" />
+        android:src="@drawable/gb_bubble_arrow_right" />
 
 </RelativeLayout>
