--- a/SpikaEnterprise/res/values/styles.xml
+++ b/SpikaEnterprise/res/values/styles.xml
@@ -1,30 +1,5 @@
 <resources>
 
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
-    <style name="AppBaseThemeChat" parent="android:Theme.Light">
-
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
-        <item name="android:windowBackground">@color/transparent</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:windowFullscreen">true</item>
-    </style>
-
-    <!-- Application theme. -->
-    <style name="AppThemeChat" parent="AppBaseThemeChat">
-
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-        <item name="android:windowBackground">@color/transparent</item>
-        <item name="android:windowFullscreen">true</item>
-        <item name="android:windowNoTitle">true</item>
-    </style>
-
     <style name="Theme.Transparent" parent="android:Theme">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
@@ -57,6 +32,8 @@
     <color name="chat_menu_gray">#dde1e4</color>
     <color name="cloud_color">#9ecadc</color>
     <color name="text_gray_image">#7e7e7e</color>
+
+    <!-- Enterprise style -->
     <color name="default_blue">#3E92FF</color>
 
 </resources>
