Refactor, sliding menu lib added

--- a/SpikaEnterprise/res/layout/activity_login.xml
+++ b/SpikaEnterprise/res/layout/activity_login.xml
@@ -1,16 +1,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:custom="http://schemas.android.com/apk/res/com.clover.spika.enterprise.chat.view"
+    xmlns:custom="http://schemas.android.com/apk/res/com.clover.spika.enterprise.chat.views"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/default_blue" >
 
-    <TextView
+    <com.clover.spika.enterprise.chat.views.RobotoThinTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/loginLayout"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/spika_big"
         android:textColor="@android:color/white"
         android:textSize="30sp"
@@ -43,7 +43,7 @@
                 android:contentDescription="@null"
                 android:src="@drawable/login_avatar" />
 
-            <EditText
+            <com.clover.spika.enterprise.chat.views.RobotoThinEditText
                 android:id="@+id/username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -76,7 +76,7 @@
                 android:contentDescription="@null"
                 android:src="@drawable/login_key" />
 
-            <EditText
+            <com.clover.spika.enterprise.chat.views.RobotoThinEditText
                 android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -96,6 +96,19 @@
                 android:layout_marginTop="10dp"
                 android:background="@color/default_blue" />
         </RelativeLayout>
+
+        <com.clover.spika.enterprise.chat.views.RobotoThinButton
+            android:id="@+id/loginBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/selector_green"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="@string/login_big"
+            android:textColor="@android:color/white" />
     </LinearLayout>
 
 </RelativeLayout>
