--- a/SpikaEnterprise/res/layout/activity_camera_crop.xml
+++ b/SpikaEnterprise/res/layout/activity_camera_crop.xml
@@ -23,7 +23,7 @@
         android:layout_below="@+id/topText"
         android:layout_centerHorizontal="true" >
 
-        <com.clover.spika.enterprise.chat.view.CroppedImageView
+        <com.clover.spika.enterprise.chat.views.CroppedImageView
             android:id="@+id/ivCameraCropPhoto"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
