--- a/SpikaEnterprise/res/layout/activity_splash.xml
+++ b/SpikaEnterprise/res/layout/activity_splash.xml
@@ -1,17 +1,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:custom="http://schemas.android.com/apk/res/com.clover.spika.enterprise.chat.view"
+    xmlns:custom="http://schemas.android.com/apk/res/com.clover.spika.enterprise.chat.views"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/splash" >
+    android:background="@color/default_blue" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:orientation="vertical"
-        android:visibility="gone" >
+        android:orientation="vertical" >
 
-        <com.clover.spika.enterprise.chat.view.RobotoThinTextView
+        <com.clover.spika.enterprise.chat.views.RobotoThinTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -20,7 +19,7 @@
             android:textSize="30sp"
             android:textStyle="bold" />
 
-        <com.clover.spika.enterprise.chat.view.RobotoThinTextView
+        <com.clover.spika.enterprise.chat.views.RobotoThinTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
