--- a/SpikaEnterprise/res/layout/dialog_progress.xml
+++ b/SpikaEnterprise/res/layout/dialog_progress.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:text="@string/processing"
-            android:textColor="@color/text_blue"
+            android:textColor="@color/default_blue"
             android:textSize="20sp" />
 
         <TextView
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:text="@string/dot"
-            android:textColor="@color/text_blue"
+            android:textColor="@color/default_blue"
             android:textSize="20sp" />
 
         <TextView
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:text="@string/dot"
-            android:textColor="@color/text_blue"
+            android:textColor="@color/default_blue"
             android:textSize="20sp" />
 
         <TextView
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:text="@string/dot"
-            android:textColor="@color/text_blue"
+            android:textColor="@color/default_blue"
             android:textSize="20sp" />
     </LinearLayout>
 
