--- a/SpikaEnterprise/res/layout/activity_character_list.xml
+++ b/SpikaEnterprise/res/layout/activity_character_list.xml
@@ -4,38 +4,38 @@
     android:layout_height="match_parent" >
 
     <RelativeLayout
-        android:id="@+id/headerInclude"
+        android:id="@+id/actionBarLayout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/menu_height"
-        android:layout_alignParentTop="true"
-        android:background="@color/white" >
+        android:background="@color/default_blue" >
 
-        <ImageView
-            android:id="@+id/headerEditBack"
+        <ImageButton
+            android:id="@+id/sidebarBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
+            android:background="@drawable/selector_transp_blue"
             android:contentDescription="@null"
             android:padding="10dp"
-            android:src="@drawable/gb_navbar_back_icon" />
+            android:scaleType="centerInside"
+            android:src="@drawable/icon_sidebar" />
 
-        <TextView
-            android:id="@+id/headerTitle"
+        <com.clover.spika.enterprise.chat.views.RobotoThinTextView
+            android:id="@+id/screenTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/select_profile"
-            android:textColor="@color/text_blue"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:text="@string/title_lobby"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
+
     </RelativeLayout>
 
     <ListView
         android:id="@+id/main_list_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/headerInclude"
+        android:layout_below="@+id/actionBarLayout"
         android:background="@color/transparent"
         android:divider="@null"
         android:dividerHeight="0dp"
@@ -47,7 +47,7 @@
         android:id="@+id/noItemsLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/headerInclude"
+        android:layout_below="@+id/actionBarLayout"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="20dp" >
