--- a/SpikaEnterprise/res/layout/activity_profile.xml
+++ b/SpikaEnterprise/res/layout/activity_profile.xml
@@ -50,8 +50,7 @@
                     android:id="@+id/circleImg"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:contentDescription="@null"
-                    android:src="@drawable/circle" />
+                    android:contentDescription="@null" />
             </RelativeLayout>
 
             <RelativeLayout
