--- a/SpikaEnterprise/res/layout/item_chat_main.xml
+++ b/SpikaEnterprise/res/layout/item_chat_main.xml
@@ -114,12 +114,6 @@
                         android:layout_centerInParent="true"
                         android:contentDescription="@null" />
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:contentDescription="@null"
-                        android:src="@drawable/circle" />
                 </RelativeLayout>
 
                 <!-- start: MessageLayout -->
@@ -219,15 +213,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:contentDescription="@null"
-                    android:src="@drawable/circle" />
+                    android:contentDescription="@null" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:contentDescription="@null"
-                    android:src="@drawable/circle" />
             </RelativeLayout>
 
             <!-- start: MessageLayout -->
