--- a/SpikaEnterprise/res/layout/item_group.xml
+++ b/SpikaEnterprise/res/layout/item_group.xml
@@ -3,8 +3,7 @@
     android:id="@+id/itemLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/transparent"
-    android:padding="10dp" >
+    android:background="@color/transparent" >
 
     <RelativeLayout
         android:id="@+id/clickLayout"
@@ -29,12 +28,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:visibility="visible" >
+                android:visibility="gone" >
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:contentDescription="@null" />
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:contentDescription="@null"
+                    android:src="@drawable/notification_icon" />
 
                 <TextView
                     android:id="@+id/missedtext"
@@ -43,7 +43,7 @@
                     android:layout_centerInParent="true"
                     android:text="!"
                     android:textColor="@color/white"
-                    android:textSize="20sp"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
             </RelativeLayout>
         </RelativeLayout>
@@ -80,7 +80,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:contentDescription="@null"
-                android:src="@drawable/gb_talk_arrow" />
+                android:src="@drawable/icon_tablearrow" />
         </LinearLayout>
     </RelativeLayout>
 
