--- a/SpikaEnterprise/res/layout/activity_lobby.xml
+++ b/SpikaEnterprise/res/layout/activity_lobby.xml
@@ -29,11 +29,46 @@
             android:textSize="20sp" />
     </RelativeLayout>
 
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/actionBarLayout"
         android:background="@android:color/white" >
-    </RelativeLayout>
-
+       
+        <LinearLayout
+            android:orientation="horizontal" 
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            >
+            
+            <ToggleButton 
+                android:id="@+id/groupsTab"
+                android:background="@drawable/toggle_tab"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:textOn="Users"
+                android:textOff="Users"
+                
+                />
+            
+            <ToggleButton 
+                android:id="@+id/usersTab"                
+                android:background="@drawable/toggle_tab"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:textOn="Groups"
+                android:textOff="Groups"
+                />
+        </LinearLayout>
+        
+     	<android.support.v4.view.ViewPager
+   			android:id="@+id/viewPager"
+   			android:layout_width="match_parent"
+   			android:layout_height="match_parent">
+     	    
+     	</android.support.v4.view.ViewPager>
+    </LinearLayout>
 </RelativeLayout>
