--- a/SpikaEnterprise/res/layout/activity_group_list.xml
+++ b/SpikaEnterprise/res/layout/activity_group_list.xml
@@ -1,7 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@color/white" >
     
     <RelativeLayout
         android:id="@+id/actionBarLayout"
@@ -34,8 +35,6 @@
         android:id="@+id/mainListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
         android:layout_below="@id/actionBarLayout"
         android:background="@color/transparent"
         android:divider="@null"
