--- a/SpikaEnterprise/res/layout/item_group.xml
+++ b/SpikaEnterprise/res/layout/item_group.xml
@@ -8,16 +8,19 @@
     <RelativeLayout
         android:id="@+id/clickLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp" >
 
         <RelativeLayout
             android:id="@+id/imageLayout"
             android:layout_width="65dp"
-            android:layout_height="65dp"
+            android:layout_height="85dp"
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp" >
             
             <com.clover.spika.enterprise.chat.views.RoundImageView
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:id="@+id/groupImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -26,9 +29,10 @@
             <RelativeLayout
                 android:id="@+id/missedLayout"
                 android:layout_width="wrap_content"
+                android:layout_marginTop="5dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:visibility="gone" >
+                android:visibility="invisible" >
 
                 <ImageView
                     android:layout_width="20dp"
@@ -70,17 +74,18 @@
             android:id="@+id/imageLayoutControl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignTop="@id/imageLayout"
+            android:layout_alignBottom="@id/imageLayout"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
             android:orientation="horizontal" >
 
             <ImageView
                 android:id="@+id/goImage"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
                 android:contentDescription="@null"
-                android:src="@drawable/icon_tablearrow" />
+                android:background="@drawable/icon_tablearrow" />
         </LinearLayout>
     </RelativeLayout>
 
