--- a/SpikaEnterprise/res/layout/activity_lobby.xml
+++ b/SpikaEnterprise/res/layout/activity_lobby.xml
@@ -40,11 +40,13 @@
             android:orientation="horizontal" 
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:background="@color/default_blue"
             >
             
             <ToggleButton 
                 android:id="@+id/groupsTab"
-                android:background="@drawable/toggle_tab"
+                android:background="@drawable/selector_toggle_tab"
+                android:textColor="@color/tab_toggle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -55,7 +57,8 @@
             
             <ToggleButton 
                 android:id="@+id/usersTab"                
-                android:background="@drawable/toggle_tab"
+                android:background="@drawable/selector_toggle_tab"
+                android:textColor="@color/tab_toggle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
