--- a/SpikaEnterprise/res/layout/fragment_lobby.xml
+++ b/SpikaEnterprise/res/layout/fragment_lobby.xml
@@ -9,8 +9,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:gravity="center"
-        android:background="@color/white"
-        android:layout_margin="1dp"
-        android:text="A"/>
+        android:background="@color/white"/>
     
 </FrameLayout>
