--- a/SpikaEnterprise/res/layout/activity_character_list.xml
+++ b/SpikaEnterprise/res/layout/activity_character_list.xml
@@ -1,7 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <RelativeLayout
         android:id="@+id/actionBarLayout"
@@ -25,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/title_lobby"
+            android:text="@string/users"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
 
