--- a/SpikaEnterprise/res/layout/activity_login.xml
+++ b/SpikaEnterprise/res/layout/activity_login.xml
@@ -109,7 +109,8 @@
             android:padding="10dp"
             android:text="@string/login_big"
             android:textColor="@android:color/white"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:onClick="onLoginClick"/>
     </LinearLayout>
 
 </RelativeLayout>
