--- a/SpikaEnterprise/res/layout/item_chat_default_you.xml
+++ b/SpikaEnterprise/res/layout/item_chat_default_you.xml
@@ -32,7 +32,6 @@
         android:layout_height="10dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:contentDescription="@null"
-        android:src="@drawable/gb_bubble_arrow_left" />
+        android:contentDescription="@null" />
 
 </RelativeLayout>
