--- a/SpikaEnterprise/res/layout/activity_chat.xml
+++ b/SpikaEnterprise/res/layout/activity_chat.xml
@@ -7,8 +7,7 @@
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="@dimen/menu_height"
-        android:layout_alignParentTop="true"
-        android:background="@drawable/gb_chat_background_overlay" >
+        android:layout_alignParentTop="true" >
 
         <ImageView
             android:id="@+id/headerBack"
@@ -17,8 +16,7 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:contentDescription="@null"
-            android:padding="10dp"
-            android:src="@drawable/gb_navbar_back_icon" />
+            android:padding="10dp" />
 
         <TextView
             android:id="@+id/headerTitle"
@@ -50,7 +48,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:contentDescription="@null"/>
+                android:contentDescription="@null" />
         </RelativeLayout>
 
         <ImageView
@@ -62,8 +60,7 @@
             android:layout_alignTop="@+id/headerPerson"
             android:layout_centerVertical="true"
             android:contentDescription="@null"
-            android:padding="10dp"
-            android:src="@drawable/gb_more" />
+            android:padding="10dp" />
     </RelativeLayout>
 
     <ListView
@@ -84,7 +81,6 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/menu_height"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/gb_chat_background_overlay"
         android:padding="5dp" >
 
         <ImageView
@@ -94,8 +90,7 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:contentDescription="@null"
-            android:padding="5dp"
-            android:src="@drawable/gb_chat_plus_icon" />
+            android:padding="5dp" />
 
         <EditText
             android:id="@+id/etMessage"
@@ -107,8 +102,7 @@
             android:imeOptions="actionDone"
             android:inputType="text"
             android:padding="5dp"
-            android:singleLine="true"
-            android:textCursorDrawable="@drawable/cursor" />
+            android:singleLine="true" />
     </RelativeLayout>
 
     <SlidingDrawer
