--- a/SpikaEnterprise/res/layout/item_chat_main.xml
+++ b/SpikaEnterprise/res/layout/item_chat_main.xml
@@ -26,8 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/spliter3"
             android:layout_centerHorizontal="true"
-            android:contentDescription="@null"
-            android:src="@drawable/gb_process_frame1" />
+            android:contentDescription="@null" />
 
         <View
             android:id="@+id/spliter"
@@ -113,7 +112,6 @@
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:contentDescription="@null" />
-
                 </RelativeLayout>
 
                 <!-- start: MessageLayout -->
@@ -214,7 +212,6 @@
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:contentDescription="@null" />
-
             </RelativeLayout>
 
             <!-- start: MessageLayout -->
