--- a/SpikaEnterprise/res/layout/activity_camera_crop.xml
+++ b/SpikaEnterprise/res/layout/activity_camera_crop.xml
@@ -93,7 +93,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_marginTop="5dp"
                 android:text="@string/create_big"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
